css: fix wrapping of `code` blocks

--- a/files/css/site.css
+++ b/files/css/site.css
@@ -37,6 +37,7 @@ code {
   line-height: 1.2;
   word-break: break-all;
   word-wrap: break-word;
+  white-space: pre-wrap;
 }
 
 .side-nav li a {
